Fixed overflow x

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     font-size: 24px;
 }
 body{
-  width: 100vw;
+  overflow-x: hidden;
 }
 #navbar{
   width: 100vw;
